--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<h1 id="sort-of-buddhism">Sort of Buddhism</h1>
-<p><em>Thoughts, notes, and essays. Written to develop my thoughts and
-express my ideas. I don’t follow a particular school, but my general
-theology and metaphysical reckoning is fairly close to general Buddhist
-themes. I intuit insights, and then try to understand them - rather than
-the other way around.</em> ## Things aren’t really colourful, reality is
-a construct</p>
+<h1 id="gerry-hawkins">Gerry Hawkins</h1>
+<p>Buddhism, synths, and greenhouses.</p>
+<h2 id="a-sort-of-buddhism">A Sort of Buddhism</h2>
+<p>Here are some thoughts, notes, and essays - written to develop my
+thoughts and express my ideas. I don’t follow a particular school, but
+my theology and metaphysical reckoning is fairly close to general
+Buddhist themes. I general prefer to intuit insights, and then try to
+understand them - rather than the other way around.</p>
+<h2 id="things-arent-really-colourful-reality-is-a-construct">Things
+aren’t really colourful, reality is a construct</h2>
 <p>The normal experience of looking at a chair is to feel as though
 there is nothing between you, the observer, and the object. It feels
 almost as though light travels directly from the chair into your mind,
