--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>Here are some thoughts, notes, and essays - written to develop my
 thoughts and express my ideas. I don’t follow a particular school, but
 my theology and metaphysical reckoning is fairly close to general
-Buddhist themes. I general prefer to intuit insights, and then try to
+Buddhist themes. I generally prefer to intuit insights, and then try to
 understand them - rather than the other way around.</p>
 <h2 id="things-arent-really-colourful-reality-is-a-construct">Things
 aren’t really colourful, reality is a construct</h2>
