--- a/index.html
+++ b/index.html
@@ -28,31 +28,30 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<h1 id="gerry-hawkins">Gerry Hawkins</h1>
-<p>Buddhism, synths, and greenhouses.</p>
-<h2 id="a-sort-of-buddhism">A Sort of Buddhism</h2>
-<p>Here are some thoughts, notes, and essays - written to develop my
-thoughts and express my ideas. I don’t follow a particular school, but
-my theology and metaphysical reckoning is fairly close to general
-Buddhist themes. I generally prefer to intuit insights, and then try to
-understand them - rather than the other way around.</p>
-<h2 id="things-arent-really-colourful-reality-is-a-construct">Things
-aren’t really colourful, reality is a construct</h2>
-<p>The normal experience of looking at a chair is to feel as though
+<h1 id="a-sort-of-buddhism">A Sort of Buddhism</h1>
+<p><a href="About%20Me.html">About Me</a></p>
+<p>Here are some vingettes, written to develop and express my thoughts.
+I don’t follow a particular school, but my theology and metaphysical
+reckoning are fairly Buddhist. I generally prefer to intuit insights,
+and then try to understand them - rather than the other way around. I
+don’t claim this method to be more valid than another, it’s just the
+path I have taken.</p>
+<h2 id="its-all-in-the-mind">It’s all in the mind</h2>
+<p>The normal experience of looking at an object is to feel as though
 there is nothing between you, the observer, and the object. It feels
-almost as though light travels directly from the chair into your mind,
-but that the truth is far from that.</p>
-<p>For a start, there are the obvious intermediaries. The lens of the
-eye focusing light, the retina translating that light into electrical
-signals, the transport of those signals to the mind, and then the brain
-interpreting those signals. However, the real magic of consciousness is
-something that exists beyond all that. We don’t simple become aware of
-the location and properties of the chair, as we might assume a computer
-system would, we experience looking at the chair in a way that is hard
-to communicate with words, we <em>see</em> the chair.</p>
+almost as though light travels directly from the object into your
+conscious, and therefore that you are <em>directly</em> observing the
+object itself - but this is not the case.</p>
+<p>For a start, there are the obvious intermediaries. The lens, the
+retina, and so on. The real magic of consciousness is something that
+exists beyond all that. We don’t simply become aware of the location and
+properties of the object, as we might assume a computer system would, we
+experience looking at the chair in a way that is hard to communicate
+with words - we <em>see</em> the chair.</p>
+<p><img src="vault/field_bw.jpeg" /></p>
 <p>Our awareness - by which I mean our consciousness at it’s most
-impersonal and fundamental level - is like a passive observer of things
-which the occur in the field of awareness.</p>
+impersonal and fundamental level - is like a passive observer, with
+things appearing in that awareness.</p>
 <p>Throughout life, this awareness is observing a constructed inner a
 world, a colourful, spatial, audible, tactile model of the world. It is
 our minds which render a blade of glass to look green, or the sky to
