--- a/About Me.html
+++ b/About Me.html
@@ -28,10 +28,20 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<p>I’m an engineer living in Wrington, a superb village in the south
-west of the UK. I started writing notes on this website at the start of
+<h1 id="about-me">About Me</h1>
+<p><a href="index.html">Home</a> <a href="Notes.html">Notes</a>. <a
+href="About%20Me.html">About Me</a> <img src="vault/me.jpeg" /></p>
+<p>I’m Gerry Hawkins, and I live in a small village in the south west of
+England called Wrington. I started writing notes on this website in
 2026.</p>
-<p>Please email me if you are interested to talk about any of this
-stuff: g [at] gpfhawkins [dot] com</p>
+<p>I’m a hardware engineer (I design circuits), and I studied Physics at
+university.</p>
+<p>I began engaging with the sorts of ideas outlined on this website in
+my mid-thirties. Away for the weekend with a small group of friends
+(walking/techno/ale/etc), we held a guided meditation, which turned out
+to be a profound experience for me.</p>
+<p>Please feel free to email me if you are interested to talk about any
+of this stuff:</p>
+<p>g [at] gpfhawkins [dot] com</p>
 </body>
 </html>
