--- a/index.html
+++ b/index.html
@@ -36,16 +36,21 @@ and reality. I don’t follow a particular school, but I am some sort of
 Buddhist. I generally prefer to intuit insights, and then try to
 understand them - rather than the other way around - but I think there
 is value in both approaches.</p>
+<p>I’ve written these pieces primarily as an exercise to developing and
+crystallise my thoughts.</p>
 <p><img src="vault/fern.jpeg" /></p>
 <h2 id="notes">Notes</h2>
 <ul>
-<li><a href="its_all_in_the_mind.html">It’s all in the mind</a> <em>Using
-sight and colour as examples to understand our constructed internal
-reality, and how our experience is indirect</em></li>
-<li><a href="universal_awareness.md.html">“Awareness is impersonal, and
+<li><p><a href="its_all_in_the_mind.html">It’s all in the mind</a>
+<em>Using sight and colour as examples to understand our constructed
+internal reality, and how our experience is indirect</em></p></li>
+<li><p><a href="universal_awareness.md.html">“Awareness is impersonal, and
 universal”</a> <em>Realising that consciousness is, at its core, an
 impersonal and common awareness, changes the identification of self
-</em></li>
+</em></p></li>
+<li><p><a href="metaphysics.md.html">“Personal metaphysical reckoning”</a>
+<em>My current understanding and best-guess of how everything
+works</em></p></li>
 </ul>
 </body>
 </html>
