--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@ crystallise my thoughts.</p>
 <li><p><a href="its_all_in_the_mind.html">It’s all in the mind</a>
 <em>Using sight and colour as examples to understand our constructed
 internal reality, and how our experience is indirect</em></p></li>
-<li><p><a href="universal_awareness.md.html">“Awareness is impersonal, and
-universal”</a> <em>Realising that consciousness is, at its core, an
-impersonal and common awareness, changes the identification of self
-</em></p></li>
-<li><p><a href="metaphysics.md.html">“Personal metaphysical reckoning”</a>
+<li><p><a href="universal_awareness.md.html">Awareness is impersonal</a>
+<em>Realising that consciousness is, at its core, an impersonal and
+common awareness, changes the identification of self </em></p></li>
+<li><p><a href="metaphysics.md.html">Personal metaphysical reckoning</a>
 <em>My current understanding and best-guess of how everything
 works</em></p></li>
 </ul>
